# rdp_api

./: .gitignore  ATF.txt  File_For_Pull_Request  README.md  SimonGoelles.md  foo  name.txt  rdb.test.db  rdb.test.db-journal  rdb.test.sqlite  setup.cfg  whitelist.txt
Documentation/: Documentation.md
csv_application/: main.py
csv_client/: dataset_20231001T0000_20231031T2300.csv  main.py
docs/: documentation.md
rdp/: Simon_Retter.md
rdp/api/: __init__.py  api_types.py  main.py
rdp/client/: app.py
rdp/crud/: __init__.py  crud.py  engine.py  fake_crud.txt  model.py  value.py
rdp/sensor/: __init__.py  reader.py
rdp/tests/: NOTtest_crud.py  conftest.py  test_add_value.py  test_add_value_type.py  (+8 more)
rdp_api/: __init__.py  model.py
rdp_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_001.py
tests/: 000_dummy_test.py  001_dummy_test.py  conftest.py  fixtures.py  test-cases.md  test00_dummy.py  test01_test_add_value.py  test02_get_value_types.py  test03_test_get_value_type.py  test04_get_values_order_by_id_and_time.py  test04_test_get_values.py  test05_get_values_order_by_id_and_value.py  test_001.py  test_001_crud.py  test_002_add_update_value_type.py  test_003_add_value.py  test_004_get_value_types.py  test_005_get_values.py  test_00_dummy.py  test_01_crud.py  test_add_or_update_value_type.py  test_add_value.py  test_configuration.py  test_crud.py  test_crud_api.py  test_crud_value_types.py  test_crud_values.py  test_dummy.py  test_dummy_tests_00.py  test_get_value_type.py  test_get_value_types.py  test_get_values.py
(+7 files in other folders)
