[metadata]
name = rdp_api
author = Robert Ulmer
author_email = rulmer@lr.htlweiz.at
description = restful api for rdp
version = 1.0.0
url = https://github.com
keywords = logging
        pytest
        file
        parser
        output
        input
	restful
	rest
	fastapi

license_file =
        LICENSE.txt

[options]
python_requires >= 3.8
packages = find:
zip_safe = False
install_requires =
	pydantic >= 1.10.2
	sqlalchemy >= 1.4
	union >= 0.1.10
	uvicorn  >= 0.20
	websockets >= 10.4
  doq >= 0.9.1
  fastapi >= 0.88
  python-jose
  passlib[bcrypt]
  python-multipart


[options.extras_require]
dev = 
  black >= 22.12
  pytest >= 7.2
  rope >= 1.6
  flake8 >= 5.0.4
  flake8-eradicate >= 1.4
  flake8-isort >= 6
  flake8-spellcheck >= 0.28
  flake8-variables-names >= 0.0.5
  flake8-builtins >= 2.1
  httpx >= 0.25.0

[flake8]
max-line-length=99
exclude = venv
docstring-convention = numpy

[isort]
profile = black

[tool:pytest]
testpaths = tests
log_level = info

